refacto:css-html-responsive

--- a/index.html
+++ b/index.html
@@ -24,14 +24,8 @@
                 </div>
                     <nav> 
                         <div class="header-nav">
-                            <ul>
-                                <li>
-                                    <a class="links" href="#accomodations-bloc" id="accomodations">Hébergements</a>
-                                </li>
-                                <li>
+                                    <a href="#accomodations-bloc" id="accomodations">Hébergements</a>
                                     <a href="#activity" id="activity">Activités</a>
-                                </li>  
-                            </ul>
                             </div>
                     </nav>
             </header>
